fix(cover): letter and word spacing, button animation

--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@
   padding: 0 50px;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 13px;
   font-size: 100px;
   font-weight: 700;
   letter-spacing: 30px;
@@ -122,7 +122,7 @@
 
 .cover__description-text {
   /* before: 2cap, safari not support cap value */
-  word-spacing: 0.8em;
+  word-spacing: 0.9em;
 }
 
 .aligned-text_center {
@@ -149,9 +149,13 @@
   font-size: 22px;
   font-weight: 400;
   text-transform: uppercase;
-  transition: 0.1s;
+  transition: 0.2s;
 }
 
 .cover__description .bet-button:hover {
   background-color: rgba(7, 7, 7, 0.2);
+}
+
+.cover__description .bet-button:active {
+  transform: scale(0.95);
 }
